--- a/Algorithms/group_maker.ipynb
+++ b/Algorithms/group_maker.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "4  0.034948  0.000000   0.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,17 +792,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">86.15799584865331</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1022.705476868627</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13003.712546148474</span><span style=\"font-weight: bold\">]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">85.66425147716424</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1028.4366781759961</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13014.115167185137</span><span style=\"font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m86.15799584865331\u001b[0m, \u001b[1;36m1022.705476868627\u001b[0m, \u001b[1;36m13003.712546148474\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m85.66425147716424\u001b[0m, \u001b[1;36m1028.4366781759961\u001b[0m, \u001b[1;36m13014.115167185137\u001b[0m\u001b[1m]\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -894,19 +894,22 @@
        "'ok!'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "save_pickle(id_nom, \"id_nom.pickle\")\n",
-    "save_pickle(id_email, \"id_email.pickle\")"
+    "save_pickle(id_email, \"id_email.pickle\")\n",
+    "save_pickle(best_groups, \"groups.pickle\")\n",
+    "save_pickle(matrix,\"distance_matrix.pickle\")\n",
+    "save_pickle(id_nombre, \"id_nombre.pickle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -925,25 +928,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------------+------------------------------------+\n",
-       "|           Nom           |               Email                |\n",
-       "+-------------------------+------------------------------------+\n",
-       "| Alessia Caterina García | alessia_caterina_garca@outlook.com |\n",
-       "|  Aurora Blanchet Ferrer |  aurora_blanchet_ferrer@gmail.com  |\n",
-       "|   Sònia Patricia James  |   snia_patricia_james@gmail.com    |\n",
-       "|     Alessia Wyndham     |    alessia_wyndham@outlook.com     |\n",
-       "+-------------------------+------------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+----------------------------+----------------------------------------+\n",
+       "|            Nom             |                 Email                  |\n",
+       "+----------------------------+----------------------------------------+\n",
+       "| Alejandra Elizabeth Taylor | alejandra_elizabeth_taylor@outlook.com |\n",
+       "| Alessia Isabella Wellesley |  alessia_isabella_wellesley@gmail.com  |\n",
+       "|     Sophie Léa Dumont      |      sophie_la_dumont@outlook.com      |\n",
+       "|  Avery Elizabeth Thompson  |  avery_elizabeth_thompson@outlook.com  |\n",
+       "+----------------------------+----------------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+-------------------------+------------------------------------+\n",
-       "|           Nom           |               Email                |\n",
-       "+-------------------------+------------------------------------+\n",
-       "| Alessia Caterina García | alessia_caterina_garca@outlook.com |\n",
-       "|  Aurora Blanchet Ferrer |  aurora_blanchet_ferrer@gmail.com  |\n",
-       "|   Sònia Patricia James  |   snia_patricia_james@gmail.com    |\n",
-       "|     Alessia Wyndham     |    alessia_wyndham@outlook.com     |\n",
-       "+-------------------------+------------------------------------+\n"
+       "+----------------------------+----------------------------------------+\n",
+       "|            Nom             |                 Email                  |\n",
+       "+----------------------------+----------------------------------------+\n",
+       "| Alejandra Elizabeth Taylor | alejandra_elizabeth_taylor@outlook.com |\n",
+       "| Alessia Isabella Wellesley |  alessia_isabella_wellesley@gmail.com  |\n",
+       "|     Sophie Léa Dumont      |      sophie_la_dumont@outlook.com      |\n",
+       "|  Avery Elizabeth Thompson  |  avery_elizabeth_thompson@outlook.com  |\n",
+       "+----------------------------+----------------------------------------+\n"
       ]
      },
      "metadata": {},
@@ -982,25 +985,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+---------------------------+---------------------------------------+\n",
-       "|            Nom            |                 Email                 |\n",
-       "+---------------------------+---------------------------------------+\n",
-       "|     María Sofía García    |       mara_sofa_garca@gmail.com       |\n",
-       "| Luisa Margarida Cambridge | luisa_margarida_cambridge@outlook.com |\n",
-       "|        Ava Thompson       |         ava_thompson@gmail.com        |\n",
-       "|        Ariel Pérez        |          ariel_prez@gmail.com         |\n",
-       "+---------------------------+---------------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+------------------------------+---------------------------------------+\n",
+       "|             Nom              |                 Email                 |\n",
+       "+------------------------------+---------------------------------------+\n",
+       "|     Sienna Evelyn Warner     |    sienna_evelyn_warner@outlook.com   |\n",
+       "|  Luisa Margarida Cambridge   | luisa_margarida_cambridge@outlook.com |\n",
+       "|      Sofia Rivera López      |      sofia_rivera_lpez@gmail.com      |\n",
+       "| Madeleine Élisabeth Dujardin | madeleine_lisabeth_dujardin@gmail.com |\n",
+       "+------------------------------+---------------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+---------------------------+---------------------------------------+\n",
-       "|            Nom            |                 Email                 |\n",
-       "+---------------------------+---------------------------------------+\n",
-       "|     María Sofía García    |       mara_sofa_garca@gmail.com       |\n",
-       "| Luisa Margarida Cambridge | luisa_margarida_cambridge@outlook.com |\n",
-       "|        Ava Thompson       |         ava_thompson@gmail.com        |\n",
-       "|        Ariel Pérez        |          ariel_prez@gmail.com         |\n",
-       "+---------------------------+---------------------------------------+\n"
+       "+------------------------------+---------------------------------------+\n",
+       "|             Nom              |                 Email                 |\n",
+       "+------------------------------+---------------------------------------+\n",
+       "|     Sienna Evelyn Warner     |    sienna_evelyn_warner@outlook.com   |\n",
+       "|  Luisa Margarida Cambridge   | luisa_margarida_cambridge@outlook.com |\n",
+       "|      Sofia Rivera López      |      sofia_rivera_lpez@gmail.com      |\n",
+       "| Madeleine Élisabeth Dujardin | madeleine_lisabeth_dujardin@gmail.com |\n",
+       "+------------------------------+---------------------------------------+\n"
       ]
      },
      "metadata": {},
@@ -1039,25 +1042,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------+------------------------------+\n",
-       "|        Nom        |            Email             |\n",
-       "+-------------------+------------------------------+\n",
-       "|   Evelyn Harper   |  evelyn_harper@outlook.com   |\n",
-       "| Sofía Rae Johnson | sofa_rae_johnson@outlook.com |\n",
-       "| Anna María Garcia |  anna_mara_garcia@gmail.com  |\n",
-       "|      Sara Mas     |      sara_mas@gmail.com      |\n",
-       "+-------------------+------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-----------------------+----------------------------------+\n",
+       "|          Nom          |              Email               |\n",
+       "+-----------------------+----------------------------------+\n",
+       "|  Isabella Fifi García | isabella_fifi_garca@outlook.com  |\n",
+       "|    Elisabeth Kühnel   |    elisabeth_khnel@gmail.com     |\n",
+       "| Víctora Feliú Ribière |   vctora_feli_ribire@yahoo.com   |\n",
+       "| Aurélia Lucia Bennett | aurlia_lucia_bennett@outlook.com |\n",
+       "+-----------------------+----------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+-------------------+------------------------------+\n",
-       "|        Nom        |            Email             |\n",
-       "+-------------------+------------------------------+\n",
-       "|   Evelyn Harper   |  evelyn_harper@outlook.com   |\n",
-       "| Sofía Rae Johnson | sofa_rae_johnson@outlook.com |\n",
-       "| Anna María Garcia |  anna_mara_garcia@gmail.com  |\n",
-       "|      Sara Mas     |      sara_mas@gmail.com      |\n",
-       "+-------------------+------------------------------+\n"
+       "+-----------------------+----------------------------------+\n",
+       "|          Nom          |              Email               |\n",
+       "+-----------------------+----------------------------------+\n",
+       "|  Isabella Fifi García | isabella_fifi_garca@outlook.com  |\n",
+       "|    Elisabeth Kühnel   |    elisabeth_khnel@gmail.com     |\n",
+       "| Víctora Feliú Ribière |   vctora_feli_ribire@yahoo.com   |\n",
+       "| Aurélia Lucia Bennett | aurlia_lucia_bennett@outlook.com |\n",
+       "+-----------------------+----------------------------------+\n"
       ]
      },
      "metadata": {},
@@ -1096,25 +1099,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------------------+---------------------------------------+\n",
-       "|              Nom              |                 Email                 |\n",
-       "+-------------------------------+---------------------------------------+\n",
-       "|      Maya Lauren Winters      |     maya_lauren_winters@gmail.com     |\n",
-       "| Sofía Alejandra Cruz Martínez | sofa_alejandra_cruz_martnez@yahoo.com |\n",
-       "|   Alessandra Elena Rodriguez  |  alessandra_elena_rodriguez@gmail.com |\n",
-       "|       Sofía Evelyn Watts      |      sofa_evelyn_watts@yahoo.com      |\n",
-       "+-------------------------------+---------------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+---------------------------+------------------------------------+\n",
+       "|            Nom            |               Email                |\n",
+       "+---------------------------+------------------------------------+\n",
+       "|    Aurélien Sophia Lane   |  aurlien_sophia_lane@outlook.com   |\n",
+       "|      Alejandra Borràs     |     alejandra_borrs@gmail.com      |\n",
+       "|  Aurora Hernández García  |  aurora_hernndez_garca@yahoo.com   |\n",
+       "| Aleixandra Maria Martínez | aleixandra_maria_martnez@gmail.com |\n",
+       "+---------------------------+------------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+-------------------------------+---------------------------------------+\n",
-       "|              Nom              |                 Email                 |\n",
-       "+-------------------------------+---------------------------------------+\n",
-       "|      Maya Lauren Winters      |     maya_lauren_winters@gmail.com     |\n",
-       "| Sofía Alejandra Cruz Martínez | sofa_alejandra_cruz_martnez@yahoo.com |\n",
-       "|   Alessandra Elena Rodriguez  |  alessandra_elena_rodriguez@gmail.com |\n",
-       "|       Sofía Evelyn Watts      |      sofa_evelyn_watts@yahoo.com      |\n",
-       "+-------------------------------+---------------------------------------+\n"
+       "+---------------------------+------------------------------------+\n",
+       "|            Nom            |               Email                |\n",
+       "+---------------------------+------------------------------------+\n",
+       "|    Aurélien Sophia Lane   |  aurlien_sophia_lane@outlook.com   |\n",
+       "|      Alejandra Borràs     |     alejandra_borrs@gmail.com      |\n",
+       "|  Aurora Hernández García  |  aurora_hernndez_garca@yahoo.com   |\n",
+       "| Aleixandra Maria Martínez | aleixandra_maria_martnez@gmail.com |\n",
+       "+---------------------------+------------------------------------+\n"
       ]
      },
      "metadata": {},
