--- a/Algorithms/group_maker.ipynb
+++ b/Algorithms/group_maker.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
     "\n",
     "\n",
     "\n",
-    "def simulated_annealing(participants: list[str], group_size:int,inicial_temperature:int=100, cooldown:float=0.95, max_iterations:int=4000) -> tuple[list[list[str]], float]:\n",
+    "def simulated_annealing(participants: list[str], group_size:int,inicial_temperature:int=100, cooldown:float=0.995, max_iterations:int=4000) -> tuple[list[list[str]], float]:\n",
     "    \"\"\"\n",
     "    Applies simulated_annealing algorithm.\n",
     "    \"\"\"\n",
@@ -774,25 +774,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">87.99700250078634</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1020.8064597477439</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13013.119758837738</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m87.99700250078634\u001b[0m, \u001b[1;36m1020.8064597477439\u001b[0m, \u001b[1;36m13013.119758837738\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">85.11881386538728</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1019.3112264008271</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13013.119758837738</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m85.11881386538728\u001b[0m, \u001b[1;36m1019.3112264008271\u001b[0m, \u001b[1;36m13013.119758837738\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">85.11881386538728</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1019.3112264008271</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m85.11881386538728\u001b[0m, \u001b[1;36m1019.3112264008271\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1019.2640057916636</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1019.2640057916636\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1014.3933186962911</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1014.3933186962911\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1014.3933186962911</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1014.3933186962911\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1014.3933186962911</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1014.3933186962911\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1014.3933186962911</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1014.3933186962911\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1014.3933186962911</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1014.3933186962911\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.7026299667554</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1012.9918120063606</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12978.305694758543</span><span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.7026299667554\u001b[0m, \u001b[1;36m1012.9918120063606\u001b[0m, \u001b[1;36m12978.305694758543\u001b[0m\u001b[1m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "participants : dict[int,list[str]] = {i:[idp for idp, participant in participants_dict.items() if participant.preferred_team_size == i] for i in range(5)}\n",
     "best_groups : dict[int,list[list[str]]] = {i : [] for i in range(5)}\n",
     "best_losses = [0.0 for _ in range(5)]\n",
-    "for i in range(5):\n",
-    "    if i < 2:\n",
-    "        best_groups[i] = [[a] for a in participants[i]]\n",
-    "    else:\n",
-    "        best_groups[i], best_losses[i] = simulated_annealing(participants[i],i)\n",
-    "\n"
+    "prov_groups : dict[int,list[list[str]]] = {i : [] for i in range(5)}\n",
+    "prov_losses = [0.0 for _ in range(5)]\n",
+    "for k in range(10):\n",
+    "    for i in range(5):\n",
+    "        if i < 2:\n",
+    "            best_groups[i] = [[a] for a in participants[i]]\n",
+    "        else:\n",
+    "            prov_groups[i], prov_losses[i] = simulated_annealing(participants[i],i)\n",
+    "            if prov_losses[i] < best_losses[i] or k==0:\n",
+    "                best_losses[i] = prov_losses[i]\n",
+    "                best_groups[i] = prov_groups[i]\n",
+    "    print(best_losses)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
